Fixed styling issues on mobile devices

--- a/css/functionalities.css
+++ b/css/functionalities.css
@@ -37,3 +37,22 @@
 .fa-car, .fa-dollar-sign, .fa-hourglass-end, .fa-mobile-alt, .fa-android, .fa-child, .fa-paw, .fa-location-arrow {
     color: #46ECC2;
 }
+
+@media screen and (max-width: 992px) {
+    .container__func {
+        display: block;
+    }
+
+    .container__func__box {
+        margin: 40px auto 0 auto;
+        width: 90%;
+        max-width: 930px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .container__func__box {
+        padding: 20px;
+        width: 100%;
+    }
+}
